add /register endpoint
