# docs/swagger.json
@@ -61,7 +61,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Banner"
+                                "$ref": "#/definitions/domain.Banner"
                             }
                         }
                     },
@@ -79,10 +79,88 @@
                     }
                 }
             }
+        },
+        "/register": {
+            "post": {
+                "description": "Register new user or admin",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Handle registrating new users",
+                "parameters": [
+                    {
+                        "description": "Username of new user",
+                        "name": "username",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Password of new user",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Desired user's role: either 'admin' or 'user'",
+                        "name": "role",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Admin's registration key",
+                        "name": "admin_key",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "An object wtih new user's info",
+                        "schema": {
+                            "$ref": "#/definitions/domain.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/serverErrors.APIError"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/serverErrors.APIError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/serverErrors.APIError"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "model.Banner": {
+        "domain.Banner": {
             "type": "object",
             "properties": {
                 "content": {
@@ -105,7 +183,7 @@
                 "tags": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/model.Tag"
+                        "$ref": "#/definitions/domain.Tag"
                     }
                 },
                 "updatedAt": {
@@ -114,7 +192,18 @@
                 }
             }
         },
-        "model.Tag": {
+        "domain.Role": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.Tag": {
             "type": "object",
             "properties": {
                 "createdAt": {
@@ -133,9 +222,29 @@
                 }
             }
         },
+        "domain.User": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "role": {
+                    "$ref": "#/definitions/domain.Role"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "serverErrors.APIError": {
             "type": "object",
             "properties": {
+                "code": {
+                    "type": "integer"
+                },
                 "error": {}
             }
         }
